<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="bteamdevelopment.contactinformation.CreateActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/fName"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hintFName"
            android:id="@+id/new_fname"
            android:singleLine="true"
            android:lines="1"
            android:layout_weight="1"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/lName"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hintLName"
            android:id="@+id/new_lname"
            android:singleLine="true"
            android:lines="1"
            android:layout_weight="1"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/mobile"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hintMobile"
            android:inputType="phone"
            android:id="@+id/new_mobile"
            android:singleLine="true"
            android:lines="1"
            android:layout_weight="1"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/home"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hintHome"
            android:inputType="phone"
            android:id="@+id/new_home"
            android:singleLine="true"
            android:lines="1"
            android:layout_weight="1"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/email"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hintEmail"
            android:inputType="textEmailAddress"
            android:id="@+id/new_email"
            android:layout_weight="1"
            android:singleLine="true"
            android:lines="1"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/address"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hintAddress"
            android:id="@+id/new_address"
            android:singleLine="true"
            android:lines="1"
            android:inputType="textPostalAddress"
            android:layout_weight="1"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/city"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hintCity"
            android:id="@+id/new_city"
            android:singleLine="true"
            android:lines="1"
            android:layout_weight="1"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/state"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hintState"
            android:id="@+id/new_state"
            android:singleLine="true"
            android:lines="1"
            android:maxLength="2"
            android:inputType="text"
            android:layout_weight="1"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/zip"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hintZip"
            android:inputType="number"
            android:id="@+id/new_zip"
            android:singleLine="true"
            android:lines="1"
            android:layout_weight="1"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_new"
            android:id="@+id/button_submit"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Image"
            android:id="@+id/button_addImage"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:id="@+id/contactPhoto"/>
    </LinearLayout>

</LinearLayout>
