<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="bteamdevelopment.contactinformation.UpdateActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:hint="@string/fName"
            android:id="@+id/editFName"
            android:textSize="20sp"
            android:singleLine="true"
            android:lines="1"
            android:textColor="#000000"
            android:paddingRight="10sp"
            android:paddingLeft="10sp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal|bold|italic" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:hint="@string/lName"
            android:id="@+id/editLName"
            android:textSize="20sp"
            android:textColor="#000000"
            android:singleLine="true"
            android:lines="1"
            android:paddingRight="10sp"
            android:paddingLeft="10sp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal|bold|italic"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile"
            android:id="@+id/mobileHeader"
            android:textSize="15sp"
            android:textColor="#000000"
            android:maxWidth="100sp"
            android:minWidth="100sp" />

        <EditText
            android:inputType="phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hintMobile"
            android:id="@+id/editMobile"
            android:layout_weight="1"
            android:singleLine="true"
            android:lines="1"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home"
            android:id="@+id/homeHeader"
            android:textSize="15sp"
            android:textColor="#000000"
            android:maxWidth="100sp"
            android:minWidth="100sp" />

        <EditText
            android:inputType="phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hintHome"
            android:id="@+id/editHome"
            android:layout_weight="1"
            android:singleLine="true"
            android:lines="1"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:id="@+id/emailHeader"
            android:textSize="15sp"
            android:textColor="#000000"
            android:maxWidth="100sp"
            android:minWidth="100sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hintEmail"
            android:id="@+id/editEmail"
            android:inputType="textEmailAddress"
            android:layout_weight="1"
            android:singleLine="true"
            android:lines="1"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="5sp"
        android:paddingTop="5sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/geographical"
            android:id="@+id/geoHeader"
            android:textSize="15sp"
            android:textColor="#f02076b4" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:id="@+id/addressHeader"
            android:textSize="15sp"
            android:textColor="#000000"
            android:maxWidth="100sp"
            android:minWidth="100sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hintAddress"
            android:id="@+id/editAddress"
            android:layout_weight="1"
            android:singleLine="true"
            android:lines="1"
            android:inputType="textPostalAddress"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:id="@+id/cityHeader"
            android:textSize="15sp"
            android:textColor="#000000"
            android:maxWidth="100sp"
            android:minWidth="100sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hintCity"
            android:id="@+id/editCity"
            android:layout_weight="1"
            android:singleLine="true"
            android:lines="1"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state"
            android:id="@+id/stateHeader"
            android:textSize="15sp"
            android:textColor="#000000"
            android:maxWidth="100sp"
            android:minWidth="100sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hintState"
            android:id="@+id/editState"
            android:layout_weight="1"
            android:singleLine="true"
            android:lines="1"
            android:maxLength="2"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zip"
            android:id="@+id/zipHeader"
            android:textSize="15sp"
            android:textColor="#000000"
            android:maxWidth="100sp"
            android:minWidth="100sp" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hintZip"
            android:id="@+id/editZip"
            android:layout_weight="1"
            android:singleLine="true"
            android:lines="1"
            android:inputType="number"
            android:paddingLeft="10sp"
            android:paddingRight="10sp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Change Image"
            android:id="@+id/btn_Upload"/>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/contactPhoto" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_Edit"
            android:text="@string/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_Delete"
            android:text="@string/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>